--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,7 @@
             name="description"
             content="Web site created using create-react-app"
         />
+        <link rel="icon" href="favicon.ico" />
         <!-- CSS only -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
@@ -16,7 +17,7 @@
         />
         <!-- JavaScript Bundle with Popper -->
 
-        <title>MERN App</title>
+        <title>Course App</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
